Linux compatibility with CMake

--- a/EngineCore/CMakeLists.txt
+++ b/EngineCore/CMakeLists.txt
@@ -16,11 +16,16 @@ file(GLOB IMGUI_BACKENDS
     "${CMAKE_SOURCE_DIR}/External/imgui/backends/imgui_impl_vulkan.cpp"
 )
 
+find_package(Vulkan REQUIRED)
+find_package(Freetype REQUIRED)
+find_package(assimp REQUIRED)
+find_package(glfw3 REQUIRED)
+
 include_directories(
-    "C:/msys64/mingw64/include"
-    "C:/msys64/mingw64/include/freetype2"
-    "C:/VulkanSDK/1.4.321.1/Include"
-    "C:/msys64/mingw64/include/glm"
+    ${Vulkan_INCLUDE_DIRS}
+    ${FREETYPE_INCLUDE_DIRS}
+    ${ASSIMP_INCLUDE_DIRS}
+    ${GLFW_INCLUDE_DIRS}
     "${CMAKE_SOURCE_DIR}/External"
     "${CMAKE_SOURCE_DIR}/EngineCore/Include"
     "${CMAKE_SOURCE_DIR}/EngineCore/Include/ECS"
@@ -31,7 +36,12 @@ include_directories(
     "${CMAKE_SOURCE_DIR}/External/imgui/backends"
 )
 
-link_directories(C:/msys64/mingw64/lib C:/VulkanSDK/1.4.321.1/Lib)
+link_directories(
+    ${FREETYPE_LIBRARY_DIRS}
+    ${ASSIMP_LIBRARY_DIRS}
+    ${Vulkan_LIBRARY_DIRS}
+    ${GLFW_LIBRARY_DIRS}
+)
 
 file(GLOB ENGINE_SRC "${CMAKE_SOURCE_DIR}/EngineCore/src/*.cpp" "${CMAKE_SOURCE_DIR}/EngineCore/src/*/*.cpp")
 
@@ -44,12 +54,11 @@ add_executable(GameEngine
 #target_compile_definitions(GameEngine PRIVATE NDEBUG)
 
 target_link_libraries(GameEngine
-    glfw3
-    vulkan-1
-    freetype
-    LinearMath
-    ws2_32
-    assimp
+    ${Vulkan_LIBRARIES}
+    ${FREETYPE_LIBRARIES}
+    ${ASSIMP_LIBRARIES}
+    glfw
+    Vulkan::Vulkan
 )
 
 add_custom_command(TARGET GameEngine POST_BUILD
@@ -63,10 +72,15 @@ add_custom_command(TARGET GameEngine POST_BUILD
     COMMAND cmd /c "${CMAKE_SOURCE_DIR}/shaders/compile.bat" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/shaders
 )
 elseif(UNIX)
+find_program(glslc NAMES glslc)
+if(NOT glslc)
+    message(FATAL_ERROR "glslc not found! Please install Vulkan SDK and ensure glslc is in your PATH.")
+else()
 add_custom_command(TARGET GameEngine POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E echo "Running shader compiler"
     COMMAND /bin/sh "${CMAKE_SOURCE_DIR}/shaders/compile.sh" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/shaders
 )
+endif()
 endif()
 
 add_custom_command(TARGET GameEngine POST_BUILD
